# zzflate

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  ConsoleApplication1.cpp  ConsoleApplication1.sln  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  Encoder.cpp  ReadMe.txt  Source.cpp  Test.cpp  TestBitOutput.cpp  TestHuffman.cpp  adler.cpp  config.h  crc.cpp  crc.h  encoder.h  encoderstate.h  generic.h  huffman.cpp  huffman.h  outputbitstream.h  safeint.h  userhuffman.cpp  userhuffman.h  visualc.h  zzflate.cpp  zzflate.h  zzflate.sln
zzflate/: Encoder.cpp  adler.cpp  config.h  crc.cpp  crc.h  decoder.h  distancelut.cpp  encoder.cpp  encoder.h  fixedhuffmanluts.cpp  gcc.h  generic.h  huffman.cpp  luts.cpp  visualc.h  zzflate.cpp  zzflate.h  zzflate.vcxproj
zztest/: Test.cpp  TestBitOutput.cpp  TestHuffman.cpp  packages.config  zztest.cpp  zztest.vcxproj  zztest.vcxproj.filters
